Add the frame number to the output file

--- a/notebooks/tilt-series/0_label-and-track-voids.ipynb
+++ b/notebooks/tilt-series/0_label-and-track-voids.ipynb
@@ -36,6 +36,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7a3ff7a-2eb2-4a8f-87ca-df84f573c476",
+   "metadata": {},
+   "source": [
+    "TODO: Convert from pixels to nm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab829c16-fc1c-449c-a9b2-922fac74c4c9",
    "metadata": {},
    "source": [
@@ -102,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:30<00:00,  3.00s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:32<00:00,  3.22s/it]\n"
      ]
     }
    ],
@@ -804,10 +812,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracked_coords = {'id': [], 'x': [], 'y': []}\n",
+    "tracked_coords = {'id': [], 'frame': [], 'x': [], 'y': []}\n",
     "for rid, row in void_tracks.query('total_frames >= 8').iterrows():\n",
-    "    for x, y in row['positions']:\n",
+    "    for i, (x, y) in enumerate(row['positions']):\n",
     "        tracked_coords['id'].append(rid)\n",
+    "        tracked_coords['frame'].append(i + row['start_frame'])\n",
     "        tracked_coords['x'].append(x)\n",
     "        tracked_coords['y'].append(y)\n",
     "tracked_coords = pd.DataFrame(tracked_coords)"
