--- a/notebooks/tilt-series/0_label-and-track-voids.ipynb
+++ b/notebooks/tilt-series/0_label-and-track-voids.ipynb
@@ -31,8 +31,9 @@
     "from rtdefects.drift import compute_drifts_from_images_multiref, subtract_drift_from_images\n",
     "from rtdefects.segmentation.pytorch import PyTorchSemanticSegmenter\n",
     "from rtdefects.analysis import analyze_defects, convert_to_per_particle, compile_void_tracks\n",
-    "from rtdefects.io import load_file\n",
+    "from rtdefects.io import load_file, encode_as_tiff\n",
     "from collections import defaultdict\n",
+    "from shutil import rmtree\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "import trackpy as tp\n",
@@ -125,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:30<00:00,  3.05s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:52<00:00,  5.26s/it]\n"
      ]
     }
    ],
@@ -211,7 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drifts = compute_drifts_from_images_multiref(images['mask'], lookahead=np.arange(8) + 1)"
+    "drifts = compute_drifts_from_images_multiref(images['mask'], offsets=np.arange(8) + 1)\n",
+    "images['drifts'] = drifts.tolist()"
    ]
   },
   {
@@ -957,19 +959,7 @@
    "metadata": {},
    "source": [
     "## Save for later use\n",
-    "Let's save a few things separately.\n",
-    "\n",
-    "First, the data for each frame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "b43b1bc7-713d-41e8-87ac-9bd2c4420ae0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results.drop(columns=['labeled_img']).to_json('frame-data.json', orient='records', lines=True)"
+    "Let's save a few things separately."
    ]
   },
   {
@@ -977,12 +967,12 @@
    "id": "3abf97c7-9467-4ed3-a03b-07ebd92483b1",
    "metadata": {},
    "source": [
-    "Then the summary of void tracks, in full detail"
+    "The summary of void tracks, in full detail"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "ded5129a-f7e5-4e54-9d83-04c66b4226cf",
    "metadata": {},
    "outputs": [],
@@ -1000,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "0f2511cf-38cb-4ecb-8944-136019998f3e",
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "15579dbf-c26d-43f8-a7ab-2afdd49a400b",
    "metadata": {},
    "outputs": [],
@@ -1027,9 +1017,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fe6f420-87aa-4b0b-bdff-354cbc6fca0b",
+   "metadata": {},
+   "source": [
+    "Save the labeled images as TIFFs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "549f8c55-4851-4561-975e-7ce885b7092e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labeled_dir = Path('images/labeled')\n",
+    "if labeled_dir.exists():\n",
+    "    rmtree(labeled_dir)\n",
+    "labeled_dir.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0b503c05-3af3-40d4-a7e5-20b017bddb4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images['labeled_path'] = [str(labeled_dir / f'frame-{i:02d}.tiff') for i in images['frame']]\n",
+    "for img, path in zip(results['labeled_img'], images['labeled_path']):\n",
+    "    Path(path).write_bytes(encode_as_tiff(img))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d4e0533-4669-44ec-8831-19547b26f461",
+   "metadata": {},
+   "source": [
+    "Finally save the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b43b1bc7-713d-41e8-87ac-9bd2c4420ae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images.drop(columns=['labeled_img', 'mask', 'shifted_mask']).to_json('frame-data.json', orient='records', lines=True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d70e6cfd-341b-4c62-88ae-3a623ca47efd",
+   "id": "3de0e2a4-46c1-4909-9762-ba83bc285020",
    "metadata": {},
    "outputs": [],
    "source": []
